# git-cli-tools

./: .gitignore  README.md  pyproject.toml
tiny_git_cli_tools/: config.py  git_add_missing_signatures.py  git_change_author.py  git_name_feature_branch.py  git_normalize_newlines.py  git_remote_change_protocol.py  git_repo_utils.py  git_rewrite_utils.py  github_create_pr.py  github_init_organization_readme.py  github_utils.py  open_ai_utils.py  remote_locator.py
